<resources>
    <string name="app_name">recipeze</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_text">Skip</string>
    <string name="done_text">Done</string>
    <string name="become_your_own_chef">Become your own chef</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets</string>
    <string name="onboarding_desc_one">You have all it takes to wander into whatever culture and setting as you get exposed to various delicacies from all around the world</string>
    <string name="onboarding_desc_two">Choose from a wide range of delicacies that have been curated carefully to ensure maximum health and reduced complications</string>
    <string name="onboarding_desc_three">You don\'t have to see it if you are not interested, select options around a circle, and get updated feed based on it.</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="username_text">Username</string>
    <string name="pin_text">PIN (4 characters)</string>
    <string name="register_text">Register</string>
    <string name="your_preferred_diets_text">Your Preferred Diets</string>
    <string name="your_preferred_cuisines_text">Your Preferred Cuisines</string>
    <string name="preference_name_placeholder">Preference Name</string>
    <string name="save_text">Save</string>
    <string name="finish_text">Finish</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="enter_pin_text">Enter PIN</string>
    <string name="backspace">&#9447;</string>
    <string name="app_name_caps">Recipeze</string>
    <string name="all_text">All</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_saved_recipes">Saved Recipes</string>
    <string name="menu_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="placeholder_ready_in_minutes">Ready In: 25 Minutes</string>
    <string name="placeholder_recipe_name">Recipe Name</string>
    <string name="it_s_a_bit_dusty_in_here">It\'s a bit dusty in here</string>
    <string name="view_saved_recipes">View Saved Recipes</string>
    <string name="cacao_maco_walnut_milk">Cacao Maco Walnut Milk</string>
    <string name="placeholder_text_single_recipe_summary">Easy, sweet and extremely delicious!</string>
    <string name="_294">294</string>
    <string name="minutes_10">10</string>
    <string name="no_recipe_available_for_this_recipe">No summary available for this recipe.</string>
    <string name="for_1_serving">For 1 Serving</string>
    <string name="lorem">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="dish_types">Dish Types: %s</string>
    <string name="source_url">Source URL: %s</string>
    <string name="source_name">Source Name: %s</string>
    <string name="license">License: %s</string>
    <string name="occasion">Occasion(s): %s</string>
    <string name="hi_fouad_what_recipes_are_you_searching_for_today">Hi, %s.<br /> What recipes are you searching for today?</string>
    <string name="enter_recipe_name_ingredient_e_t_c">Enter recipe name, ingredient e.t.c.</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="search_results_for_search_result_item">Search results for \'search result item\'</string>
</resources>
