<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <import type="android.view.View" alias="V"/>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:padding="@dimen/medium_padding"
        app:layoutDescription="@xml/activity_search_scene"
        tools:context=".fragments.search.SearchFragment">

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_salutation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hi_fouad_what_recipes_are_you_searching_for_today" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:elevation="4dp"
            android:hint="@string/enter_recipe_name_ingredient_e_t_c"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_salutation" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/search_recipes_loader"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:indeterminate="true"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:visibility="@{ isLoading ? V.VISIBLE : V.GONE }"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />-->

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/search_button_background"
            android:elevation="4dp"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_salutation" />

        <TextView
            android:id="@+id/recent_searches_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recent_searches"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_searches_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recent_searches_heading"
            tools:itemCount="5"
            tools:listitem="@layout/item_recent_searches" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>